<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HelpPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        >
    <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_authors"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"

            />

        <TextView
            android:id="@+id/vaibhav_patel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaibhav_patel"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/devarsh_patwa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devarsh_patwa"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/aryan_amin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aryan_amin"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/brianna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brianna"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/dhwani"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dhwani"
            android:layout_gravity="center"/>



        <TextView
            android:id="@+id/activity_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_version"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/blue"
            />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/interface_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interface_info"
            android:singleLine="false"
            />


    </LinearLayout>


</ScrollView>