<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:src="@drawable/logo_formatter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Together We Ride"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_slogan"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/firstName_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstName_text"
                    />

                <EditText
                    android:id="@+id/firstName_inputField"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:height="30dp"
                    android:background="@drawable/input_text_select"
                    android:ems="20"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/lastName_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastName_text" />
                <EditText
                    android:id="@+id/lastName_inputField"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:height="30dp"
                    android:background="@drawable/input_text_select"
                    android:ems="20"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            />

        <EditText
            android:id="@+id/email_inputField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:height="30dp"
            android:background="@drawable/input_text_select"
            android:ems="20"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textCursorDrawable="@drawable/color_cursor" />

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password_text"
            />

        <EditText
            android:id="@+id/password_inputField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text_select"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textCursorDrawable="@drawable/color_cursor" />

        <Button
            android:id="@+id/signUp_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:onClick="signUpBtnListener"
            android:text="@string/sign_up_text"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp_btn"
            >
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/or_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/signUp_with_google_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:drawableLeft="@drawable/google"
            android:gravity="center"
            android:onClick="signUpWithGoogleBtnListener"
            android:text="@string/sign_up_with_google"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/need_signUp_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need_to_signIn_text"
            android:layout_marginTop="10dp"
            android:gravity="center"
            />
        <Button
            android:id="@+id/signIn_btn_transition"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:onClick="signInBtnTransition"
            android:textColor="@color/white"
            android:text="@string/sign_in_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>