<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomePageActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/home_page_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:text="Hello John Doe"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="25dp"
            android:paddingLeft="10dp"/>

        <ImageButton
            android:id="@+id/home_page_profile_btn"
            android:src="@drawable/male_user_formatter"
            android:background="@drawable/transparent_drawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose"
            android:textSize="15dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/your_route"
            android:textSize="13dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

<!--                This is for the two icons from and to icons-->

                <ImageView
                    android:id="@+id/pickup_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/user_location"
                    android:paddingTop="10dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:rotation="90"
                    android:src="@drawable/dotted" />

                <ImageView
                    android:id="@+id/destination_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/place_marker" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingRight="10dp">

<!--                This is for the from and to destinations-->
                <TextView
                    android:id="@+id/from_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/from_text" />

                <EditText
                    android:id="@+id/from_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/input_text_select"/>

                <TextView
                    android:id="@+id/to_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to_text" />

                <EditText
                    android:id="@+id/to_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/input_text_select"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/search_text"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/spinner_background"
                android:layout_weight="1"
                android:layout_marginRight="20dp">
            <Spinner
                android:id="@+id/dropdown_option"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
            </FrameLayout>

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search"
                android:textAllCaps="false"/>

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="History"
        android:textSize="15dp"
        android:paddingLeft="10dp">
    </TextView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>



</LinearLayout>